--- a/src/Kconfig
+++ b/src/Kconfig
@@ -85,10 +85,10 @@ config PMW3360_ORIENTATION_270
 endchoice
 
 config PMW3360_INVERT_X
-    bool "Invert X axis"
+    bool "Invert the X axis of PMW3360 sensor"
 
 config PMW3360_INVERT_Y
-	bool "Invert Y axis"
+    bool "Invert the Y axis of PMW3360 sensor"
 
 module = PMW3360
 module-str = PMW3360
