--- a/src/Kconfig
+++ b/src/Kconfig
@@ -7,7 +7,7 @@
 
 menuconfig PMW3360
     bool "PMW3360 mouse optical sensor"
-  select SPI
+    select SPI
     help
       Enable PMW3360 mouse optical sensor.
 
@@ -65,12 +65,12 @@ config PMW3360_CPI
     help
       Default CPI value.
 
-config PMW3360_CPI_DIVIDOR
-    int "PMW3360's default CPI dividor"
+config PMW3360_CPI_DIVISOR
+    int "PMW3360's default CPI divisor"
     default 4
     range 1 12
     help
-      Default CPI dividor value.
+      Default CPI divisor value.
 
 config PMW3360_SCROLL_CPI
     int "PMW3360's CPI in scroll mode"
@@ -79,12 +79,12 @@ config PMW3360_SCROLL_CPI
     help
       Scroll CPI value
 
-config PMW3360_SCROLL_CPI_DIVIDOR
-    int "PMW3360's CPI dividor in scroll mode"
+config PMW3360_SCROLL_CPI_DIVISOR
+    int "PMW3360's CPI divisor in scroll mode"
     default 1
     range 1 12
     help
-      Scroll CPI dividor value.
+      Scroll CPI divisor value.
 
 config PMW3360_SNIPE_CPI
     int "PMW3360's CPI in snipe mode"
@@ -93,12 +93,12 @@ config PMW3360_SNIPE_CPI
     help
       Snipe CPI value, with 200 step
 
-config PMW3360_SNIPE_CPI_DIVIDOR
-    int "PMW3360's CPI dividor in snipe mode"
+config PMW3360_SNIPE_CPI_DIVISOR
+    int "PMW3360's CPI divisor in snipe mode"
     default 1
     range 1 100
     help
-      Snipe CPI dividor value.
+      Snipe CPI divisor value.
 
 config PMW3360_RUN_DOWNSHIFT_TIME_MS
     int "PMW3360's default RUN mode downshift time"
