--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,6 @@ zephyr_library()
 
 zephyr_library_sources_ifdef(CONFIG_PMW3360 src/pmw3360.c)
 zephyr_library_sources_ifdef(CONFIG_PMW3360 src/pmw3360_priv.c)
+zephyr_library_sources_ifdef(CONFIG_PMW3360 src/behaviors/behavior_pmw3360_cpi_inc.c)
+zephyr_library_sources_ifdef(CONFIG_PMW3360 src/behaviors/behavior_pmw3360_cpi_dec.c)
 zephyr_include_directories(${APPLICATION_SOURCE_DIR}/include)
