Changed api, to have a increase, a decrease and and reset function for the CPI values

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ zephyr_library_sources_ifdef(CONFIG_PMW3360 src/pmw3360.c)
 zephyr_library_sources_ifdef(CONFIG_PMW3360 src/pmw3360_priv.c)
 zephyr_library_sources_ifdef(CONFIG_PMW3360 src/behaviors/behavior_pmw3360_cpi_inc.c)
 zephyr_library_sources_ifdef(CONFIG_PMW3360 src/behaviors/behavior_pmw3360_cpi_dec.c)
+zephyr_library_sources_ifdef(CONFIG_PMW3360 src/behaviors/behavior_pmw3360_cpi_reset.c)
 zephyr_include_directories(${APPLICATION_SOURCE_DIR}/include)
